force-app/main/default/objects/MUSW__Alert_Template__c/MUSW__Alert_Template__c.object-meta.xml
<CustomObject>
    <label>Alert Template</label>
    <nameField>
        <label>Alert Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alert Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>