force-app/main/default/objects/MUSW__Alert_Template__c/fields/MUSW__Applicable_Object_Types__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicable_Object_Types__c</fullName>
    <label>Applicable Object Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>MUSW__Address__c</fullName>
                <label>Address</label>
            </value>
            <value>
                <fullName>MUSW__Application2__c</fullName>
                <label>Application</label>
            </value>
            <value>
                <fullName>MUSW__Complaint2__c</fullName>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>MUSW__Inspection__c</fullName>
                <label>Inspection</label>
            </value>
            <value>
                <fullName>MUSW__License2__c</fullName>
                <label>License</label>
            </value>
            <value>
                <fullName>MUSW__Parcel__c</fullName>
                <label>Parcel</label>
            </value>
            <value>
                <fullName>MUSW__Permit2__c</fullName>
                <label>Permit</label>
            </value>
            <value>
                <fullName>MUSW__Project2__c</fullName>
                <label>Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>