force-app/main/default/objects/MUSW__Alert_Template__c/fields/MUSW__Internal_Message__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Internal_Message__c</fullName>
    <description>Internal Message for Alert Template</description>
    <label>Internal Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>