force-app/main/default/objects/MUSW__Alert_Template__c/fields/MUSW__Message__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>