force-app/main/default/objects/MUSW__Alert_Template__c/fields/MUSW__Metadata__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Metadata__c</fullName>
    <label>Metadata</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>