force-app/main/default/objects/MUSW__Alert_Template__c/fields/MUSW__Visibility__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Visibility__c</fullName>
    <description>Visibility defines where the alert will be visible.</description>
    <inlineHelpText>Visibility defines where the alert will be visible.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>