force-app/main/default/objects/MUSW__Alert_Template__c/validationRules/MUSW__Hold_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Hold_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(MUSW__Type__c, &quot;Hold&quot;),
  NOT(ISPICKVAL(MUSW__Apply_To__c, &quot;Fields&quot;))
)</errorConditionFormula>
    <errorDisplayField>MUSW__Apply_To__c</errorDisplayField>
    <errorMessage>Holds can only apply to fields.</errorMessage>
</ValidationRule>