force-app/main/default/objects/MUSW__Alert_Template__c/validationRules/MUSW__Notice_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Notice_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(AND(ISPICKVAL(MUSW__Type__c, &quot;Notice&quot;),
    NOT(ISPICKVAL(MUSW__Apply_To__c, &quot;Current Record&quot;))),
  AND(ISPICKVAL(MUSW__Type__c, &quot;Notice&quot;),
    NOT(ISPICKVAL(MUSW__Apply_To__c, &quot;Current Record and Related Objects&quot;)))
	)</errorConditionFormula>
    <errorDisplayField>MUSW__Apply_To__c</errorDisplayField>
    <errorMessage>Notices can only apply to Current Record OR Current Record and Related Objects.</errorMessage>
</ValidationRule>