force-app/main/default/objects/MUSW__Alert_Template__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Message__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Apply_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>